# migrate-and-seeder

./: .gitignore  README.md  run.sh
migrations/: 20230110171127_create_users_table.up.sql  20230110171542_create_posts_table.up.sql  20230110182205_alter_created_at_and_updated_at_on_posts_table.down.sql  20230110182205_alter_created_at_and_updated_at_on_posts_table.up.sql
seeder/: Cargo.toml
seeder/src/: main.rs
